2009-07-16  Aapo Kojo  <aapo.kojo@nokia.com>

	Release 2.2.63
	
2009-07-15  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#120636 [REGU]Phone application is opened in the background
		  if tapped on missed call notification when flash message
		  is displayed

	Make incoming event previews insensitive if there's a sysmodal.

	* src/mb/hd-comp-mgr.c:
	  hd_comp_mgr_map_notify:
	    let the cmgr decide whether the note is clicked or not
	  hd_comp_mgr_setup_input_viewport:
	    for this grab the input area of incoming event notifs
	    unconditionally
	* src/mb/hd-note.h
	* src/mb/hd-note.c (hd_note_clicked):
	  make the decision here and if there's no sysmodals in sight...
	* src/util/hd-util.h
	* src/util/hd-util.c (hd_util_clicked):
	  ...synthetize a ButtonPress
	* src/home/hd-switcher.c (hd_switcher_notification_clicked):
	  which was factored out from here

2009-07-14  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c (NOTE_SEPARATOR_PADDING):
	  Make the separator line in notif thumbnails edge-to-edge.

2009-07-14  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* data/transition.ini:
	  Tuned home::zoom and task_nav::zoom to make Martin happy.

2009-07-13  Laszlo Pere  <lpere@blumsoft.eu>

	* src/mb/hd-comp-mgr.c: A glitch has been fixed by handling the 'old
	  leader become a follower' use case. It fixes the media player first
	  start when the main view was previously shown in the background.

2009-07-10  Laszlo Pere  <lpere@blumsoft.eu>

	Fixes: #NB121519 A blank frame like window with out any title is shown
	                 on the desktop.

        * src/mb/hd-comp-mgr.c: Adding the window to the task switcher when 
	it is removed from a stack and it is no more a stacked window.

2009-07-08  Aapo Kojo <aapo.kojo@nokia.com>

	Release 2.2.62

2009-07-08  Laszlo Pere  <lpere@blumsoft.eu>

	NB#125920 [REGF]Device is unlocked without lock code from active call
	          in Layout mode
