@@ -1,3 +1,10 @@
+2009-07-16  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* src/util/hd-volume-profile.c:
+	  Don't use deprecated functions from libprofile-dev.
+	* debian/control:
+	  Set libprofile-dev version.
+
 2009-07-16  Aapo Kojo  <aapo.kojo@nokia.com>
 
 	Release 2.2.63
